--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,8 +4,8 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - export AWS_REGION="<YOUR REGION>"
-      - export AWS_ACCOUNT_ID="<YOUR ACCOUNT ID>"
+      - export AWS_REGION="ap-northeast-2"
+      - export AWS_ACCOUNT_ID="950059881520"
       - export IMAGE_REPO_NAME="dogs"
       - aws --version
       - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
@@ -28,4 +28,3 @@ phases:
       - printf '[{"name":"dogs","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 artifacts:
     files: imagedefinitions.json
-    
